// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`dynamic-import.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import.defer("foo");

=====================================output=====================================
import.defer("foo");

================================================================================
`;

exports[`dynamic-import.js format 2`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.defer("foo");
    |        ^
  2 |
Cause: The only valid meta property for import is 'import.meta' (1:7)"
`;

exports[`dynamic-import.js format 3`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.defer("foo");
    |        ^
  2 |
Cause: The only valid meta property for import is 'import.meta'"
`;

exports[`dynamic-import.js format 4`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.defer("foo");
    |        ^^^^^
  2 |
Cause: [1:7-1:12]: The only valid meta property for import is 'import.meta'"
`;

exports[`dynamic-import-attributes-expression.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import.defer("x", { with: { attr: "val" } });

=====================================output=====================================
import.defer("x", { with: { attr: "val" } });

================================================================================
`;

exports[`dynamic-import-attributes-expression.js format 2`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.defer("x", { with: { attr: "val" } });
    |        ^
  2 |
Cause: The only valid meta property for import is 'import.meta' (1:7)"
`;

exports[`dynamic-import-attributes-expression.js format 3`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.defer("x", { with: { attr: "val" } });
    |        ^
  2 |
Cause: The only valid meta property for import is 'import.meta'"
`;

exports[`dynamic-import-attributes-expression.js format 4`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.defer("x", { with: { attr: "val" } });
    |        ^^^^^
  2 |
Cause: [1:7-1:12]: The only valid meta property for import is 'import.meta'"
`;

exports[`import-defer.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import defer * as ns from "x";

=====================================output=====================================
import defer * as ns from "x";

================================================================================
`;

exports[`import-defer.js format 2`] = `
"Unexpected token (1:14)
> 1 | import defer * as ns from "x";
    |              ^
  2 |
Cause: Unexpected token (1:13)"
`;

exports[`import-defer.js format 3`] = `
"Unexpected token * (1:14)
> 1 | import defer * as ns from "x";
    |              ^
  2 |
Cause: Unexpected token *"
`;

exports[`import-defer.js format 4`] = `
"Expected 'from' (1:14)
> 1 | import defer * as ns from "x";
    |              ^
  2 |
Cause: [1:13-1:14]: Expected 'from'"
`;

exports[`import-defer-attributes-declaration.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import defer * as ns from "x" with { attr: "val" };

=====================================output=====================================
import defer * as ns from "x" with { attr: "val" };

================================================================================
`;

exports[`import-defer-attributes-declaration.js format 2`] = `
"Unexpected token (1:14)
> 1 | import defer * as ns from "x" with { attr: "val" };
    |              ^
  2 |
Cause: Unexpected token (1:13)"
`;

exports[`import-defer-attributes-declaration.js format 3`] = `
"Unexpected token * (1:14)
> 1 | import defer * as ns from "x" with { attr: "val" };
    |              ^
  2 |
Cause: Unexpected token *"
`;

exports[`import-defer-attributes-declaration.js format 4`] = `
"Expected 'from' (1:14)
> 1 | import defer * as ns from "x" with { attr: "val" };
    |              ^
  2 |
Cause: [1:13-1:14]: Expected 'from'"
`;

exports[`no-default.js format 1`] = `
"Only \`import defer * as x from "./module"\` is valid. (1:14)
> 1 | import defer x from "x";
    |              ^
  2 |
Cause: Only \`import defer * as x from "./module"\` is valid. (1:13)"
`;

exports[`no-default.js format 2`] = `
"Unexpected token (1:14)
> 1 | import defer x from "x";
    |              ^
  2 |
Cause: Unexpected token (1:13)"
`;

exports[`no-default.js format 3`] = `
"Unexpected token x (1:14)
> 1 | import defer x from "x";
    |              ^
  2 |
Cause: Unexpected token x"
`;

exports[`no-default.js format 4`] = `
"Expected 'from' (1:14)
> 1 | import defer x from "x";
    |              ^
  2 |
Cause: [1:13-1:14]: Expected 'from'"
`;

exports[`no-default.js format 5`] = `
"Default imports are not allowed in a deferred import. (1:8)
> 1 | import defer x from "x";
    |        ^^^^^
  2 |"
`;

exports[`no-default.js format 6`] = `
"Only \`import defer * as x from "./module"\` is valid. (1:14)
> 1 | import defer x from "x";
    |              ^
  2 |
Cause: Only \`import defer * as x from "./module"\` is valid. (1:13)"
`;

exports[`no-named.js format 1`] = `
"Only \`import defer * as x from "./module"\` is valid. (1:16)
> 1 | import defer { x } from "x";
    |                ^
  2 |
Cause: Only \`import defer * as x from "./module"\` is valid. (1:15)"
`;

exports[`no-named.js format 2`] = `
"Unexpected token (1:14)
> 1 | import defer { x } from "x";
    |              ^
  2 |
Cause: Unexpected token (1:13)"
`;

exports[`no-named.js format 3`] = `
"Unexpected token { (1:14)
> 1 | import defer { x } from "x";
    |              ^
  2 |
Cause: Unexpected token {"
`;

exports[`no-named.js format 4`] = `
"Expected 'from' (1:14)
> 1 | import defer { x } from "x";
    |              ^
  2 |
Cause: [1:13-1:14]: Expected 'from'"
`;

exports[`no-named.js format 5`] = `
"Named imports are not allowed in a deferred import. (1:8)
> 1 | import defer { x } from "x";
    |        ^^^^^
  2 |"
`;

exports[`no-named.js format 6`] = `
"Only \`import defer * as x from "./module"\` is valid. (1:16)
> 1 | import defer { x } from "x";
    |                ^
  2 |
Cause: Only \`import defer * as x from "./module"\` is valid. (1:15)"
`;
